CMake fixes: TiMemoryConfig.cmake.in + ex{1,2}/CMakeLists.txt

--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -25,6 +25,9 @@ if(DEFINED CMAKE_CXX_STANDARD)
         set(CMAKE_CXX_STANDARD_REQUIRED ON)
     endif("${CMAKE_CXX_STANDARD}" VERSION_LESS 11 OR
         "${CMAKE_CXX_STANDARD}" VERSION_GREATER 17)
+else(DEFINED CMAKE_CXX_STANDARD)
+    set(CMAKE_CXX_STANDARD @CMAKE_CXX_STANDARD@)
+    set(CMAKE_CXX_STANDARD_REQUIRED ON)
 endif(DEFINED CMAKE_CXX_STANDARD)
 
 check_required_components(@PROJECT_NAME@)
