Python __init__.py fixes for Windows
- Restored some old initialization since new one had issues on Windows

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -81,6 +81,7 @@ install:
     # pip installation
     pip install -U setuptools disttools
     pip install -U matplotlib numpy pillow
+    $env:TIMEMORY_DEBUG=4
 
 build_script:
 - mkdir build-timemory
