--- a/setup.cfg
+++ b/setup.cfg
@@ -18,5 +18,5 @@ cmake_library_path=
 cmake_include_path=
 # developer config (for hybrid Python C++)
 devel_install=ON
-shared_linking=ON
+dynamic_link=ON
 pybind11_install=OFF
