--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,10 +1,10 @@
 
 include_directories(${CMAKE_CURRENT_LIST_DIR})
 
-#if(SHARED_PYTHON_LINKING)
+#if(TIMEMORY_DYNAMIC_LINK)
 #    set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR})
 #    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)
-#endif(SHARED_PYTHON_LINKING)
+#endif(TIMEMORY_DYNAMIC_LINK)
 
 ################################################################################
 #
@@ -35,7 +35,13 @@ set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS ${DEV_WARNINGS} CACHE BOOL
 #message(STATUS "Dev warnings: ${DEV_WARNINGS}")
 include_directories(${CMAKE_CURRENT_LIST_DIR}/cereal/include)
 
-#----------------------------------------------------------------------------
+################################################################################
+#
+#        TiMemory (C++)
+#
+################################################################################
+
+#------------------------------------------------------------------------------#
 # Locate sources and headers for this project
 # - headers are included so they will show up in IDEs
 file(GLOB sources ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
@@ -44,21 +50,36 @@ file(GLOB headers ${CMAKE_CURRENT_LIST_DIR}/timemory/*.hpp)
 # libraries to install
 set(INSTALL_LIBRARIES )
 
+#------------------------------------------------------------------------------#
 # macro to build a library of type: shared, static
 macro(_BUILD_LIBRARY TYPE OUTPUT_NAME)
+
     string(TOUPPER "${TYPE}" LIB_TYPE)
     add_library(${OUTPUT_NAME}-${TYPE} ${LIB_TYPE} ${ARGN})
     target_link_libraries(${OUTPUT_NAME}-${TYPE} PUBLIC ${EXTERNAL_LIBRARIES})
+
+    # Windows
 	if(WIN32)
-	    set_target_properties(${OUTPUT_NAME}-${TYPE} PROPERTIES
-		    OUTPUT_NAME ${OUTPUT_NAME}
-			COMPILE_DEFINITIONS TIMEMORY_DLL
-			LANGUAGE CXX
-            # C++ shared library fallback installation
-            LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
-            POSITION_INDEPENDENT_CODE ON)
-		target_compile_options(${OUTPUT_NAME}-${TYPE} PRIVATE /MP /bigobj /Tp)
+
+        if("${LIB_TYPE}" STREQUAL "SHARED")
+            set_target_properties(${OUTPUT_NAME}-${TYPE} PROPERTIES
+                OUTPUT_NAME lib${OUTPUT_NAME}
+                COMPILE_DEFINITIONS _TIMEMORY_DLL
+                LANGUAGE CXX
+                # C++ shared library fallback installation
+                LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
+                POSITION_INDEPENDENT_CODE ON)
+        else("${LIB_TYPE}" STREQUAL "SHARED")
+            set_target_properties(${OUTPUT_NAME}-${TYPE} PROPERTIES
+                OUTPUT_NAME lib${OUTPUT_NAME}
+                COMPILE_DEFINITIONS _TIMEMORY_STATIC
+                LANGUAGE CXX
+                POSITION_INDEPENDENT_CODE ON)
+        endif("${LIB_TYPE}" STREQUAL "SHARED")
+        #target_compile_options(${OUTPUT_NAME}-${TYPE} PRIVATE /MP /bigobj /Tp)
+
 	else(WIN32)
+
         if(XCODE)
             # xcode has issue with "cmake_symlink_library"
             set_target_properties(${OUTPUT_NAME}-${TYPE} PROPERTIES
@@ -75,146 +96,34 @@ macro(_BUILD_LIBRARY TYPE OUTPUT_NAME)
                 LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
                 POSITION_INDEPENDENT_CODE ON)
         endif(XCODE)
-	endif(WIN32)
+
+    endif(WIN32)
+
     list(APPEND INSTALL_LIBRARIES ${LIBNAME}-${TYPE})
+
 endmacro(_BUILD_LIBRARY TYPE OUTPUT_NAME)
+#------------------------------------------------------------------------------#
+
 
 # this includes compile definitions for headers
 add_subdirectory(timemory)
 
-message(STATUS "")
-message(STATUS "Building ${PROJECT_NAME} with object library...")
-message(STATUS "")
-if(NOT XCODE)
+if(NOT XCODE AND NOT WIN32)
+    message(STATUS "\nBuilding ${PROJECT_NAME} with object library...\n")
+    # build an object library
     add_library(${LIBNAME}-object OBJECT ${sources} ${headers})
-    _build_library(shared ${LIBNAME} $<TARGET_OBJECTS:${LIBNAME}-object>)
-    _build_library(static ${LIBNAME} $<TARGET_OBJECTS:${LIBNAME}-object>)
-else(NOT XCODE)
-    _build_library(shared ${LIBNAME} ${sources} ${headers})
-    _build_library(static ${LIBNAME} ${sources} ${headers})
-endif(NOT XCODE)
+    set(LIBRARY_SOURCES $<TARGET_OBJECTS:${LIBNAME}-object>)
+else(NOT XCODE AND NOT WIN32)
+    # directly compile sources
+    set(LIBRARY_SOURCES ${sources} ${headers})
+endif(NOT XCODE AND NOT WIN32)
 
-# library type to link pybind11 module to
-add_option(SHARED_PYTHON_LINKING
-    "Link the TiMemory PyBind11 module to the shared library" OFF)
-set(LINK_TYPE static)
+_build_library(shared ${LIBNAME} ${LIBRARY_SOURCES})
+_build_library(static ${LIBNAME} ${LIBRARY_SOURCES})
 
-if(SHARED_PYTHON_LINKING)
-    set(LINK_TYPE shared)
-    install(TARGETS ${LIBNAME}-shared
-        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/lib
-        COMPONENT python)
-endif(SHARED_PYTHON_LINKING)
-
-#----------------------------------------------------------------------------
-# PyBind11
-#
-message(STATUS "External libraries: ${EXTERNAL_LIBRARIES}")
-pybind11_add_module(${LIBNAME} ${CMAKE_CURRENT_LIST_DIR}/${LIBNAME}.cc)
-# link to static library so no need for RPATH resolution
-target_link_libraries(${LIBNAME} PUBLIC ${LIBNAME}-${LINK_TYPE} ${EXTERNAL_LIBRARIES})
-add_dependencies(${LIBNAME} ${LIBNAME}-${LINK_TYPE})
-
-if(WIN32)
-	set_target_properties(${OUTPUT_NAME} PROPERTIES
-		COMPILE_FLAGS "/MP /bigobj /Tp"
-		LANGUAGE CXX
-		POSITION_INDEPENDENT_CODE ON)
-endif(WIN32)
-
-set_target_properties(${LIBNAME} PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory
-    ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory
-    RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory)
-
-file(READ ${PROJECT_SOURCE_DIR}/.LICENSE LICENSE)
-string(REPLACE "// " "# " LICENSE "${LICENSE}")
-foreach(_FILE plotting mpi_support util)
-    set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/timemory/${_FILE})
-    set(BINARY_DIR ${PROJECT_BINARY_DIR}/timemory/${_FILE})
-
-    # copy over the python file
-    configure_file(${SOURCE_DIR}/${_FILE}.py
-        ${BINARY_DIR}/${_FILE}.py COPYONLY)
-
-    # copy over the init file
-    configure_file(${SOURCE_DIR}/__init__.py
-        ${BINARY_DIR}/__init__.py COPYONLY)
-
-    # install the folder
-    install(DIRECTORY ${BINARY_DIR}/
-        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_FILE}
-        COMPONENT python)
-endforeach(_FILE plotting mpi_support util)
-
-# install the plotting.py file as an executable
-configure_file(${PROJECT_BINARY_DIR}/timemory/plotting/plotting.py
-    ${PROJECT_BINARY_DIR}/timemory-plotter COPYONLY)
-
-install(FILES ${PROJECT_BINARY_DIR}/timemory-plotter
-    DESTINATION ${TIMEMORY_INSTALL_BINDIR}
-    COMPONENT python
-    PERMISSIONS
-    OWNER_EXECUTE OWNER_READ OWNER_WRITE
-    GROUP_EXECUTE GROUP_READ
-    WORLD_EXECUTE WORLD_READ)
-
-#----------------------------------------------------------------------------
-# MPI info
-#
-set(MPI_EXE_INFO "MPI not supported")
-set(MPI_C_INFO "MPI not supported")
-set(MPI_CXX_INFO "MPI not supported")
-if(USE_MPI AND MPI_FOUND)
-
-    execute_process(COMMAND ${MPIEXEC_EXECUTABLE} --version
-        OUTPUT_VARIABLE MPI_EXE_INFO
-        ERROR_QUIET
-        OUTPUT_STRIP_TRAILING_WHITESPACE
-        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
-
-    execute_process(COMMAND ${MPI_C_COMPILER} --version
-        OUTPUT_VARIABLE MPI_C_INFO
-        ERROR_QUIET
-        OUTPUT_STRIP_TRAILING_WHITESPACE
-        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
-
-    execute_process(COMMAND ${MPI_CXX_COMPILER} --version
-        OUTPUT_VARIABLE MPI_CXX_INFO
-        ERROR_QUIET
-        OUTPUT_STRIP_TRAILING_WHITESPACE
-        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
-
-endif(USE_MPI AND MPI_FOUND)
-
-file(WRITE ${PROJECT_BINARY_DIR}/timemory/mpi_support/mpi_exe_info.txt "${MPI_EXE_INFO}")
-file(WRITE ${PROJECT_BINARY_DIR}/timemory/mpi_support/mpi_c_info.txt "${MPI_C_INFO}")
-file(WRITE ${PROJECT_BINARY_DIR}/timemory/mpi_support/mpi_cxx_info.txt "${MPI_CXX_INFO}")
-
-foreach(_TYPE exe c cxx)
-    install(FILES ${PROJECT_BINARY_DIR}/timemory/mpi_support/mpi_${_TYPE}_info.txt
-        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/mpi_support)
-endforeach(_TYPE exe c cxx)
-
-#----------------------------------------------------------------------------
-# Installation info for Python
-set(TIMEMORY_INFO_FILE ${CMAKE_BINARY_DIR}/timemory/lib/timemory_pathinfo.txt)
-add_custom_target(${PROJECT_NAME}-shared-library-path ALL
-    COMMAND ${CMAKE_COMMAND}
-        -DOUTPUT=${TIMEMORY_INFO_FILE}
-        -DLENGTH=2
-        -DNAMES="timemory_shared_library\;timemory_dynamic_library"
-        -DVALUES="$<TARGET_FILE:${LIBNAME}-shared>\;$<TARGET_FILE:${LIBNAME}>"
-        -P ${PROJECT_SOURCE_DIR}/cmake/Scripts/generator2file.cmake
-    COMMENT "Generating timemory_pathinfo.txt..."
-    VERBATIM)
-
-install(FILES ${TIMEMORY_INFO_FILE}
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/lib)
-#----------------------------------------------------------------------------
+#------------------------------------------------------------------------------#
 # Install the targets and export
 #
-
 if(NOT SETUP_PY OR PYTHON_DEVELOPER_INSTALL)
     # C++ compiled libraries
     install(TARGETS ${INSTALL_LIBRARIES}
@@ -232,24 +141,25 @@ if(NOT SETUP_PY OR PYTHON_DEVELOPER_INSTALL)
         DESTINATION ${TIMEMORY_INSTALL_CMAKEDIR}
         COMPONENT development)
 
+    export(TARGETS ${INSTALL_LIBRARIES}
+        FILE ${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake)
+
 endif(NOT SETUP_PY OR PYTHON_DEVELOPER_INSTALL)
 
-configure_file(${PROJECT_SOURCE_DIR}/timemory/timemory.py
-    ${PROJECT_BINARY_DIR}/timemory/timemory.py COPYONLY)
-configure_file(${PROJECT_SOURCE_DIR}/cmake/Templates/__init__.py.in
-    ${PROJECT_BINARY_DIR}/timemory/__init__.py @ONLY)
 
-# Python library target (linked to static target)
-install(TARGETS ${LIBNAME}
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}
-    COMPONENT python)
+#------------------------------------------------------------------------------#
+# Python bindings
+#
+if(TIMEMORY_PYTHON_BINDING)
 
-install(FILES ${PROJECT_BINARY_DIR}/timemory/timemory.py
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}
-    COMPONENT python)
+    add_subdirectory(python)
 
-install(FILES ${PROJECT_BINARY_DIR}/timemory/__init__.py
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}
-    COMPONENT python)
+    if(TIMEMORY_DYNAMIC_LINK)
+        set(LINK_TYPE shared)
+        install(TARGETS ${LIBNAME}-shared
+            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/lib
+            COMPONENT python)
+    endif(TIMEMORY_DYNAMIC_LINK)
 
-export(TARGETS ${INSTALL_LIBRARIES} FILE ${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake)
+endif(TIMEMORY_PYTHON_BINDING)
+
