--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -1,6 +1,8 @@
 
-
 if(WIN32)
     set_directory_properties(PROPERTIES
-        COMPILE_DEFINITIONS TIMEMORY_DLL)
+        COMPILE_DEFINITIONS _TIMEMORY_DLL)
 endif(WIN32)
+
+set_property(GLOBAL APPEND PROPERTY
+    BUILDTREE_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR})
