--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -8,7 +8,12 @@
 # library type to link pybind11 module to
 add_option(TIMEMORY_DYNAMIC_LINK
     "Link the TiMemory PyBind11 module to the shared library" ON)
-set(LINK_TYPE static)
+
+if(TIMEMORY_DYNAMIC_LINK)
+    set(LINK_TYPE shared)
+else(TIMEMORY_DYNAMIC_LINK)
+    set(LINK_TYPE static)
+endif(TIMEMORY_DYNAMIC_LINK)
 
 #----------------------------------------------------------------------------
 # PyBind11
@@ -18,13 +23,6 @@ pybind11_add_module(${LIBNAME} ${CMAKE_CURRENT_LIST_DIR}/${LIBNAME}.cpp)
 # link to static library so no need for RPATH resolution
 target_link_libraries(${LIBNAME} PUBLIC ${LIBNAME}-${LINK_TYPE} ${EXTERNAL_LIBRARIES})
 add_dependencies(${LIBNAME} ${LIBNAME}-${LINK_TYPE})
-
-if(WIN32)
-	set_target_properties(${OUTPUT_NAME} PROPERTIES
-		COMPILE_FLAGS "/MP /bigobj /Tp"
-		LANGUAGE CXX
-		POSITION_INDEPENDENT_CODE ON)
-endif(WIN32)
 
 set_target_properties(${LIBNAME} PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory
