Removing Windows ARCHIVE_OUTPUT_DIRECTORY as this seems to possibly cause error

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -69,7 +69,7 @@ macro(_BUILD_LIBRARY TYPE OUTPUT_NAME)
                 # C++ shared library fallback installation
                 LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
                 RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
-                ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib 
+                #ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory/lib
                 POSITION_INDEPENDENT_CODE ON)
         else("${LIB_TYPE}" STREQUAL "SHARED")
             set_target_properties(${OUTPUT_NAME}-${TYPE} PROPERTIES
