--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -26,7 +26,7 @@ add_dependencies(${LIBNAME} ${LIBNAME}-${LINK_TYPE})
 
 set_target_properties(${LIBNAME} PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory
-    ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory
+    #ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory
     RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/timemory)
 
 file(READ ${PROJECT_SOURCE_DIR}/.LICENSE LICENSE)
