--- a/cmake/Templates/cdash/Init.cmake.in
+++ b/cmake/Templates/cdash/Init.cmake.in
@@ -144,7 +144,7 @@ if(NOT "${CTEST_GENERATOR_PLATFORM}" STREQUAL "")
 else(NOT "${CTEST_GENERATOR_PLATFORM}" STREQUAL "")
     set(GENERATOR_ARGS "")
 endif(NOT "${CTEST_GENERATOR_PLATFORM}" STREQUAL "")
-set(CTEST_CONFIGURE_COMMAND     "${CTEST_CMAKE_COMMAND} ${CTEST_CONFIG_OPTIONS} -DBUILD_TESTING=ON -DDASHBOARD_MODE=ON -DCMAKE_INSTALL_PREFIX=${CTEST_INSTALL_DIRECTORY} -Wno-dev ${CTEST_SOURCE_DIRECTORY} -G ${CTEST_CMAKE_GENERATOR} ${GENERATOR_ARGS}")
+set(CTEST_CONFIGURE_COMMAND     "${CTEST_CMAKE_COMMAND} ${CTEST_CONFIG_OPTIONS} -DTIMEMORY_BUILD_TESTING=ON -DDASHBOARD_MODE=ON -DCMAKE_INSTALL_PREFIX=${CTEST_INSTALL_DIRECTORY} -Wno-dev ${CTEST_SOURCE_DIRECTORY} -G ${CTEST_CMAKE_GENERATOR} ${GENERATOR_ARGS}")
 
 if(WIN32)
     set(CTEST_BUILD_COMMAND     "${CTEST_CMAKE_COMMAND} --build ${CTEST_BINARY_DIRECTORY} --config @CMAKE_BUILD_TYPE@ --target INSTALL")
