--- a/examples/ex2/CMakeLists.txt
+++ b/examples/ex2/CMakeLists.txt
@@ -25,11 +25,29 @@ if(NOT "${CMAKE_PROJECT_NAME}" STREQUAL "${PROJECT_NAME}")
         PROPERTY IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake")
     set(TiMemory_LIBRARIES timemory-shared ${EXTERNAL_LIBRARIES})
     set(PROJECT_DEPENDS timemory-static timemory-shared)
+
 else()
+
+    find_package(MPI REQUIRED)
     find_package(TiMemory REQUIRED)
     foreach(_DIR ${TiMemory_INCLUDE_DIRS})
         include_directories(SYSTEM ${_DIR})
     endforeach(_DIR ${TiMemory_INCLUDE_DIRS})
+
+    # Add the MPI-specific compiler and linker flags
+    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILE_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MPI_CXX_LINK_FLAGS}")
+    include_directories(${MPI_INCLUDE_PATH}
+        ${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
+
+    foreach(_TYPE C_LIBRARIES CXX_LIBRARIES EXTRA_LIBRARY)
+        set(_TYPE MPI_${_TYPE})
+        if(${_TYPE})
+            list(APPEND MPI_LIBRARIES ${${_TYPE}})
+        endif(${_TYPE})
+    endforeach(_TYPE C_LIBRARIES CXX_LIBRARIES EXTRA_LIBRARY)
+
+    list(APPEND EXTERNAL_LIBRARIES ${MPI_LIBRARIES})
 endif()
 
 if(NOT DEFINED CMAKE_CXX_STANDARD)
@@ -49,6 +67,6 @@ if(DEFINED PROJECT_DEPENDS)
     add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
 endif(DEFINED PROJECT_DEPENDS)
 
-if(NOT DEFINED SETUP_PY OR NOT SETUP_PY)
+if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
     install(TARGETS ${EXE_NAME} DESTINATION bin)
-endif(NOT DEFINED SETUP_PY OR NOT SETUP_PY)
+endif(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
