PyPi 1.3.0 - pip devel + macros
- setup.py will install CMake config properly
- platform-default settings on whether to use dynamic linking (Windows=OFF, else=ON)
- added more macros
- synced with improvements/changes in geant4 branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,4 +62,5 @@ add_subdirectory(examples)
 #   Package setup
 ################################################################################
 
+include(Testing)
 include(PackageConfigure)
