--- a/setup.cfg
+++ b/setup.cfg
@@ -18,5 +18,6 @@ cmake_library_path=
 cmake_include_path=
 # developer config (for hybrid Python C++)
 devel_install=ON
-dynamic_link=ON
 pybind11_install=OFF
+# choose platform default, e.g. Windows will be static
+dynamic_link=platform-default
