CMake updates for Windows

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -101,17 +101,19 @@ endmacro(_BUILD_LIBRARY TYPE OUTPUT_NAME)
 # this includes compile definitions for headers
 add_subdirectory(timemory)
 
-if(NOT XCODE)
+if(NOT XCODE AND NOT WIN32)
     message(STATUS "Building ${PROJECT_NAME} with object library...")
     # build an object library
     add_library(${LIBNAME}-object OBJECT ${sources} ${headers})
     set(LIBRARY_SOURCES $<TARGET_OBJECTS:${LIBNAME}-object>)
-else(NOT XCODE)
+else(NOT XCODE AND NOT WIN32)
     # directly compile sources
     set(LIBRARY_SOURCES ${sources} ${headers})
-endif(NOT XCODE)
+endif(NOT XCODE AND NOT WIN32)
 
-_build_library(shared ${LIBNAME} ${LIBRARY_SOURCES})
+if(TIMEMORY_DYNAMIC_LINK OR NOT WIN32)
+    _build_library(shared ${LIBNAME} ${LIBRARY_SOURCES})
+endif(TIMEMORY_DYNAMIC_LINK OR NOT WIN32)
 _build_library(static ${LIBNAME} ${LIBRARY_SOURCES})
 
 #------------------------------------------------------------------------------#
