CMake fixes for Windows

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -84,19 +84,21 @@ endforeach(_TYPE exe c cxx)
 
 #----------------------------------------------------------------------------
 # Installation info for Python
-set(TIMEMORY_INFO_FILE ${CMAKE_BINARY_DIR}/timemory/lib/timemory_pathinfo.txt)
-add_custom_target(${PROJECT_NAME}-shared-library-path ALL
-    COMMAND ${CMAKE_COMMAND}
-        -DOUTPUT=${TIMEMORY_INFO_FILE}
-        -DLENGTH=2
-        -DNAMES="timemory_shared_library\;timemory_dynamic_library"
-        -DVALUES="$<TARGET_FILE:${LIBNAME}-shared>\;$<TARGET_FILE:${LIBNAME}>"
-        -P ${PROJECT_SOURCE_DIR}/cmake/Scripts/generator2file.cmake
-    COMMENT "Generating timemory_pathinfo.txt..."
+if(TIMEMORY_DYNAMIC_LINK)
+    set(TIMEMORY_INFO_FILE ${CMAKE_BINARY_DIR}/timemory/lib/timemory_pathinfo.txt)
+    add_custom_target(${PROJECT_NAME}-shared-library-path ALL
+        COMMAND ${CMAKE_COMMAND}
+            -DOUTPUT=${TIMEMORY_INFO_FILE}
+            -DLENGTH=2
+            -DNAMES="timemory_shared_library\;timemory_dynamic_library"
+            -DVALUES="$<TARGET_FILE:${LIBNAME}-shared>\;$<TARGET_FILE:${LIBNAME}>"
+            -P ${PROJECT_SOURCE_DIR}/cmake/Scripts/generator2file.cmake
+        COMMENT "Generating timemory_pathinfo.txt..."
     VERBATIM)
 
-install(FILES ${TIMEMORY_INFO_FILE}
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/lib)
+    install(FILES ${TIMEMORY_INFO_FILE}
+        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/lib)
+endif(TIMEMORY_DYNAMIC_LINK)
 
 #----------------------------------------------------------------------------
 # Install the python stuff
