Adding _TIMEMORY_STATIC definition to Python timemory source for Windows

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -9,6 +9,10 @@ if(TIMEMORY_DYNAMIC_LINK)
     set(LINK_TYPE shared)
 else(TIMEMORY_DYNAMIC_LINK)
     set(LINK_TYPE static)
+	if(WIN32)
+		set_source_files_properties(${LIBNAME}.cpp PROPERTIES
+			COMPILE_DEFINITIONS _TIMEMORY_STATIC)
+	endif(WIN32)
 endif(TIMEMORY_DYNAMIC_LINK)
 
 #----------------------------------------------------------------------------
